git-svn-id: https://svn.kuali.org/repos/foundation/sandbox/checkstyle@1556 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/src/main/resources/checkstyle.properties
+++ b/src/main/resources/checkstyle.properties
@@ -50,3 +50,4 @@ EqualsAvoidNull.2=String literal expressions should be on the left side of an eq
 MissingOverride=Must include @java.lang.Override annotation when {@inheritDoc} Javadoc tag exists.
 MissingDeprecated=Must include both @java.lang.Deprecated annotation and @deprecated Javadoc tag with description.
 notsure=Missing a Javadoc comment.
+modifier out of order with the JLS suggestions.
