--- a/src/main/resources/checkstyle.properties
+++ b/src/main/resources/checkstyle.properties
@@ -44,7 +44,7 @@ UnusedImports=Unused import -
 MagicNumber=is a magic number.
 WhitespaceBefore=is preceded with whitespace.
 FinalClass=should be declared as final.
-AvoidStarImporg=Using the '.*' form of import should be avoided -
+AvoidStarImport=Using the '.*' form of import should be avoided -
 EqualsAvoidNull.1=String literal expressions should be on the left side of an equals comparison.
 EqualsAvoidNull.2=String literal expressions should be on the left side of an equalsIgnoreCase comparison.
 MissingOverride=Must include @java.lang.Override annotation when {@inheritDoc} Javadoc tag exists.
