git-svn-id: https://svn.kuali.org/repos/foundation/sandbox/checkstyle@1560 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/src/main/resources/checkstyle.properties
+++ b/src/main/resources/checkstyle.properties
@@ -31,13 +31,13 @@ ArrayTypeStyle=Array brackets at illegal position.
 SimplifyBooleanReturn=Conditional logic can be removed.
 RedundantImport.1=Duplicate import
 RedundantImport.2=Redundant import
-EmptyBlock=Empty catch block.
-EmptyStatement.1=Empty statement.
+EmptyBlock.1=Empty catch block.
+EmptyBlock.2=Must have at least one statement.
+EmptyStatement=Empty statement.
 SimplifyBooleanExpression=Expression can be simplified.
 IllegalInstantiation=Instantiation of
 LineLength=Line is longer than
 StringLiteralEquality=Literal Strings should be compared using equals(), not '!='.
-EmptyStatement.2=Must have at least one statement.
 RedundantThrows=Redundant throws:
 UpperEll=Should use uppercase 'L'.
 UnusedImports=Unused import -
