--- a/src/main/resources/checkstyle.properties
+++ b/src/main/resources/checkstyle.properties
@@ -49,5 +49,4 @@ EqualsAvoidNull.1=String literal expressions should be on the left side of an eq
 EqualsAvoidNull.2=String literal expressions should be on the left side of an equalsIgnoreCase comparison.
 MissingOverride=Must include @java.lang.Override annotation when {@inheritDoc} Javadoc tag exists.
 MissingDeprecated=Must include both @java.lang.Deprecated annotation and @deprecated Javadoc tag with description.
-notsure=Missing a Javadoc comment.
-modifier out of order with the JLS suggestions.
+MissingDeprecated=Missing a Javadoc comment.
