git-svn-id: https://svn.kuali.org/repos/foundation/sandbox/checkstyle@1563 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/src/main/resources/checkstyle.properties
+++ b/src/main/resources/checkstyle.properties
@@ -48,5 +48,5 @@ AvoidStarImport=Using the '.*' form of import should be avoided -
 EqualsAvoidNull.1=String literal expressions should be on the left side of an equals comparison.
 EqualsAvoidNull.2=String literal expressions should be on the left side of an equalsIgnoreCase comparison.
 MissingOverride=Must include @java.lang.Override annotation when {@inheritDoc} Javadoc tag exists.
-MissingDeprecated=Must include both @java.lang.Deprecated annotation and @deprecated Javadoc tag with description.
-MissingDeprecated=Missing a Javadoc comment.
+MissingDeprecated.1=Must include both @java.lang.Deprecated annotation and @deprecated Javadoc tag with description.
+MissingDeprecated.2=Missing a Javadoc comment.
