--- a/common/pom.xml
+++ b/common/pom.xml
@@ -9,7 +9,8 @@
   express or implied. See the License for the specific language governing
   permissions and limitations under the License.
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.kuali</groupId>
@@ -23,6 +24,9 @@
   <name>Kuali Common</name>
 
   <properties>
+    <checkstyle.console>true</checkstyle.console>
+    <checkstyle.config.location>org/kuali/cm/checkstyle/kuali-sun.xml</checkstyle.config.location>
+    <checkstyle.enable.rules.summary>true</checkstyle.enable.rules.summary>
     <maven.build.timestamp.format>yyyy-MM-dd HH:mm z</maven.build.timestamp.format>
 
     <!-- Explicitly set build timestamp. The maven-resource-plugin is not filtering values correctly without this -->
@@ -68,6 +72,7 @@
 
     <!-- -->
     <kuali.testjar.phase>package</kuali.testjar.phase>
+    <kuali.cm.tools.version>1.4</kuali.cm.tools.version>
   </properties>
   <repositories>
     <repository>
@@ -106,17 +111,20 @@
           <version>2.3.2</version>
         </plugin>
         <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
+          <groupId>org.kuali.maven.plugins</groupId>
           <artifactId>maven-checkstyle-plugin</artifactId>
-          <version>2.6</version>
+          <version>2.6.1</version>
           <configuration>
-            <configLocation>org/kuali/cm/checkstyle/kuali-sun.xml</configLocation>
+            <configLocation>${checkstyle.config.location}</configLocation>
+            <enableRulesSummary>${checkstyle.enable.rules.summary}</enableRulesSummary>
+            <suppressionsLocation>${checkstyle.suppressions.location}</suppressionsLocation>
+            <logViolationsToConsole>${checkstyle.console}</logViolationsToConsole>
           </configuration>
           <dependencies>
             <dependency>
               <groupId>org.kuali.cm</groupId>
               <artifactId>cm-tools</artifactId>
-              <version>1.3</version>
+              <version>${kuali.cm.tools.version}</version>
             </dependency>
           </dependencies>
         </plugin>
@@ -277,10 +285,12 @@
                 </configuration>
               </plugin>
               <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
+                <groupId>org.kuali.maven.plugins</groupId>
                 <artifactId>maven-checkstyle-plugin</artifactId>
                 <configuration>
                   <configLocation>org/kuali/cm/checkstyle/kuali-sun.xml</configLocation>
+                  <enableRulesSummary>${checkstyle.enable.rules.summary}</enableRulesSummary>
+                  <logViolationsToConsole>${checkstyle.console}</logViolationsToConsole>
                 </configuration>
               </plugin>
               <!-- Included here as a default only until Maven 3.1 is out which will support 'mixins'.
@@ -333,7 +343,7 @@
             <dependency>
               <groupId>org.kuali.cm</groupId>
               <artifactId>cm-tools</artifactId>
-              <version>1.3</version>
+              <version>${kuali.cm.tools.version}</version>
             </dependency>
           </dependencies>
         </plugin>
