Adding intermediate staging database for integration env
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/cfg-envs/trunk@5804 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kc/kcwklyig/deploy.cfg
+++ b/kc/kcwklyig/deploy.cfg
@@ -4,8 +4,7 @@ configURL=test.kc.kuali.org:~/kuali/main/wklyig/
 
 dbType=mysql
 dbMode=embedded
-dbParent=dba
-dbImportMasks=KCR_*_B000.sql KC_*_B000.sql kcwklyig/KC_*_??S?.sql
+dbParent=311igstg
 import.torque.database.user=kcwklyig
 import.torque.database.schema=kcwklyig
 import.torque.database.password=wklyig174kc
