Fixing database reference
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/cfg-envs/trunk@5806 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kc/kctest31/deploy.cfg
+++ b/kc/kctest31/deploy.cfg
@@ -4,7 +4,7 @@ configURL=test.kc.kuali.org:~/kuali/main/test31/
 
 dbType=oracle
 dbMode=embedded
-dbParent=kctstdba
+dbParent=tstdba
 dbImportMasks=KRC_*_B000.sql KC_*_B000.sql KRC_*_??S?.sql KC_*_??S?.sql
 import.torque.database.user=kctest31
 import.torque.database.schema=kctest31
