--- a/kc/krtest31/deploy.cfg
+++ b/kc/krtest31/deploy.cfg
@@ -5,7 +5,7 @@ configURL=test.kc.kuali.org:~/kuali/main/test31/
 
 dbType=oracle
 dbMode=embedded
-dbParent=krtstdba
+dbParent=tstdba
 dbImportMasks=KR_*_B000.sql KR_*_??S?.sql
 import.torque.database.user=krtest31
 import.torque.database.schema=krtest31
