Added test environment to ingest KEW files
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/cfg-envs/trunk@5809 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kc/krtstdba/deploy.cfg
+++ b/kc/krtstdba/deploy.cfg
@@ -1,4 +1,7 @@
+svnLocation=rice/tags/rice-1.0.3.2
 dbSvnLocation=kc_project/branches/kc_project-db_test
+deployURL=test.kc.kuali.org:/opt/kc/dba/webapps/kr-tstdba.war
+configURL=test.kc.kuali.org:~/kuali/main/tstdba/
 
 dbType=oracle
 dbMode=embedded
