--- a/kc/kctest31/deploy.cfg
+++ b/kc/kctest31/deploy.cfg
@@ -1,3 +1,4 @@
+svnLocation=kc_project/branches/kc_project-db_test
 dbSvnLocation=kc_project/branches/kc_project-db_test
 deployURL=test.kc.kuali.org:/opt/kc/test31/webapps/kc-test31.war
 configURL=test.kc.kuali.org:~/kuali/main/test31/
