--- a/liquibase/pom.xml
+++ b/liquibase/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.kuali</groupId>
@@ -14,19 +15,20 @@
     <pluginManagement>
       <plugins>
         <plugin>
-          <groupId>org.liquibase</groupId>
+          <groupId>org.kuali.db.liquibase</groupId>
           <artifactId>liquibase-maven-plugin</artifactId>
-          <version>2.0.1</version>
+          <version>2.0.3-SNAPSHOT</version>
           <configuration>
-            <changeLogFile>simple.xml</changeLogFile>
+            <changeLogFile>${project.basedir}/src/test/resources/simple.xml</changeLogFile>
             <defaultSchemaName>KSLIQUIBASE</defaultSchemaName>
             <username>KSLIQUIBASE</username>
             <password>KSLIQUIBASE</password>
             <driver>oracle.jdbc.driver.OracleDriver</driver>
             <url>jdbc:oracle:thin:@deploy.ks.kuali.org:1521:KS</url>
             <promptOnNonLocalDatabase>false</promptOnNonLocalDatabase>
-            <dropFirst>true</dropFirst>
+            <dropFirst>false</dropFirst>
             <verbose>true</verbose>
+            <logging>info</logging>
           </configuration>
           <dependencies>
             <dependency>
