Fixing typo in import mask
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/cfg-envs/trunk@5813 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kc/kc311igstg/deploy.cfg
+++ b/kc/kc311igstg/deploy.cfg
@@ -3,7 +3,7 @@ svnLocation=kc_project/trunk
 dbType=oracle
 dbMode=embedded
 dbParent=dba
-dbImportMasks=KCR_*_B000.sql KC_*_B000.sql kcwklyig/KC_*_??S?.sql
+dbImportMasks=KRC_*_B000.sql KC_*_B000.sql kcwklyig/KC_*_??S?.sql
 import.torque.database.user=kc311igstg
 import.torque.database.schema=kc311igstg
 import.torque.database.password=igstg174kc
