--- a/kuali-sql/src/test/resources/pom.xml
+++ b/kuali-sql/src/test/resources/pom.xml
@@ -27,6 +27,60 @@
           <groupId>org.kuali.maven.plugins</groupId>
           <artifactId>sql-maven-plugin</artifactId>
           <version>1.6</version>
+          <executions>
+            <execution>
+              <id>oracle</id>
+              <phase>process-resources</phase>
+              <goals>
+                <goal>execute</goal>
+              </goals>
+              <configuration>
+                <driver>${oracle.driver}</driver>
+                <url>${oracle.dba.url}</url>
+                <username>system</username>
+                <password>gw570229</password>
+                <delimiter>/</delimiter>
+                <delimiterType>row</delimiterType>
+                <enableFiltering>true</enableFiltering>
+                <srcFiles>
+                  <srcFile>../../main/src/main/resources/org/kuali/sql/oracle/dba/drop.sql</srcFile>
+                  <srcFile>../../main/src/main/resources/org/kuali/sql/oracle/dba/create.sql</srcFile>
+                </srcFiles>
+              </configuration>
+            </execution>
+            <execution>
+              <id>mysql</id>
+              <phase>process-resources</phase>
+              <goals>
+                <goal>execute</goal>
+              </goals>
+              <configuration>
+                <driver>${mysql.driver}</driver>
+                <url>${mysql.dba.url}</url>
+                <username>root</username>
+                <password>gw570229</password>
+                <delimiter>/</delimiter>
+                <delimiterType>row</delimiterType>
+                <enableFiltering>true</enableFiltering>
+                <srcFiles>
+                  <srcFile>../../main/src/main/resources/org/kuali/sql/mysql/dba/drop.sql</srcFile>
+                  <srcFile>../../main/src/main/resources/org/kuali/sql/mysql/dba/create.sql</srcFile>
+                </srcFiles>
+              </configuration>
+            </execution>
+          </executions>
+          <dependencies>
+            <dependency>
+              <groupId>com.oracle</groupId>
+              <artifactId>ojdbc14</artifactId>
+              <version>10.2.0.3.0</version>
+            </dependency>
+            <dependency>
+              <groupId>mysql</groupId>
+              <artifactId>mysql-connector-java</artifactId>
+              <version>5.1.13</version>
+            </dependency>
+          </dependencies>
         </plugin>
       </plugins>
     </pluginManagement>
