--- a/kuali-sql/src/test/resources/pom.xml
+++ b/kuali-sql/src/test/resources/pom.xml
@@ -30,6 +30,9 @@
     <mysql.driver>com.mysql.jdbc.Driver</mysql.driver>
     <mysql.dba.url>jdbc:mysql://localhost</mysql.dba.url>
     <mysql.url>${mysql.dba.url}/${sql.database}</mysql.url>
+    <derby.driver>org.apache.derby.jdbc.EmbeddedDriver</derby.driver>
+    <derby.dba.url>jdbc:derby:${project.build.directory}/${sql.database};create=true</derby.dba.url>
+    <derby.url>jdbc:derby:${sql.database}</derby.url>
   </properties>
   <build>
     <pluginManagement>
@@ -97,8 +100,32 @@
                 </srcFiles>
               </configuration>
             </execution>
+            <execution>
+              <id>derby</id>
+              <phase>process-resources</phase>
+              <goals>
+                <goal>execute</goal>
+              </goals>
+              <configuration>
+                <driver>${derby.driver}</driver>
+                <url>${derby.dba.url}</url>
+                <username>root</username>
+                <password>gw570229</password>
+                <delimiter>/</delimiter>
+                <delimiterType>row</delimiterType>
+                <enableFiltering>true</enableFiltering>
+                <srcFiles>
+                  <srcFile>../../main/resources/org/kuali/sql/derby/validate.sql</srcFile>
+                </srcFiles>
+              </configuration>
+            </execution>
           </executions>
           <dependencies>
+            <dependency>
+              <groupId>org.apache.derby</groupId>
+              <artifactId>derby</artifactId>
+              <version>10.8.1.2</version>
+            </dependency>
             <dependency>
               <groupId>com.oracle</groupId>
               <artifactId>ojdbc14</artifactId>
