--- a/liquibase/pom.xml
+++ b/liquibase/pom.xml
@@ -21,8 +21,8 @@
     <mysql.dba.url>jdbc:mysql://localhost</mysql.dba.url>
     <mysql.url>${mysql.dba.url}/${sql.database}</mysql.url>
     <derby.driver>org.apache.derby.jdbc.EmbeddedDriver</derby.driver>
-    <derby.dba.url>jdbc:derby:${project.build.directory}/derby/${sql.database};create=true</derby.dba.url>
-    <derby.url>jdbc:derby:${sql.database}</derby.url>
+    <derby.dba.url>${derby.url};create=true</derby.dba.url>
+    <derby.url>jdbc:derby:${project.build.directory}/derby/${sql.database}</derby.url>
   </properties>
   <build>
     <pluginManagement>
@@ -194,6 +194,11 @@
             </execution>
           </executions>
           <dependencies>
+            <dependency>
+              <groupId>org.apache.derby</groupId>
+              <artifactId>derby</artifactId>
+              <version>10.8.1.2</version>
+            </dependency>
             <dependency>
               <groupId>com.oracle</groupId>
               <artifactId>ojdbc14</artifactId>
