git-svn-id: https://svn.kuali.org/repos/foundation/trunk@1603 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/liquibase/pom.xml
+++ b/liquibase/pom.xml
@@ -106,8 +106,8 @@
               <configuration>
                 <driver>${derby.driver}</driver>
                 <url>${derby.dba.url}</url>
+                <enableAnonymousPassword>true</enableAnonymousPassword>
                 <username>root</username>
-                <password>gw570229</password>
                 <delimiter>/</delimiter>
                 <delimiterType>row</delimiterType>
                 <enableFiltering>true</enableFiltering>
