git-svn-id: https://svn.kuali.org/repos/foundation/trunk@1605 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/liquibase/pom.xml
+++ b/liquibase/pom.xml
@@ -187,6 +187,7 @@
                 <goal>update</goal>
               </goals>
               <configuration>
+                <changeLogFile>${project.basedir}/src/test/resources/derby.xml</changeLogFile>
                 <migrationSqlOutputFile>${project.build.directory}/liquibase/migrate-derby.sql</migrationSqlOutputFile>
                 <driver>${derby.driver}</driver>
                 <url>${derby.url}</url>
