git-svn-id: https://svn.kuali.org/repos/foundation/trunk@1614 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/liquibase/pom.xml
+++ b/liquibase/pom.xml
@@ -190,6 +190,7 @@
                 <migrationSqlOutputFile>${project.build.directory}/liquibase/migrate-derby.sql</migrationSqlOutputFile>
                 <driver>${derby.driver}</driver>
                 <url>${derby.url}</url>
+                <logging>finest</logging>
               </configuration>
             </execution>
           </executions>
