git-svn-id: https://svn.kuali.org/repos/foundation/trunk@1615 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/liquibase/pom.xml
+++ b/liquibase/pom.xml
@@ -99,7 +99,7 @@
             </execution>
             <execution>
               <id>derby</id>
-              <phase>process-resources</phase>
+              <phase>none</phase>
               <goals>
                 <goal>execute</goal>
               </goals>
@@ -189,8 +189,7 @@
               <configuration>
                 <migrationSqlOutputFile>${project.build.directory}/liquibase/migrate-derby.sql</migrationSqlOutputFile>
                 <driver>${derby.driver}</driver>
-                <url>${derby.url}</url>
-                <logging>finest</logging>
+                <url>${derby.dba.url}</url>
               </configuration>
             </execution>
           </executions>
