git-svn-id: https://svn.kuali.org/repos/foundation/trunk@1616 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/liquibase/pom.xml
+++ b/liquibase/pom.xml
@@ -59,7 +59,7 @@
           <executions>
             <execution>
               <id>oracle</id>
-              <phase>process-resources</phase>
+              <phase>none</phase>
               <goals>
                 <goal>execute</goal>
               </goals>
@@ -79,7 +79,7 @@
             </execution>
             <execution>
               <id>mysql</id>
-              <phase>process-resources</phase>
+              <phase>none</phase>
               <goals>
                 <goal>execute</goal>
               </goals>
