--- a/liquibase/pom.xml
+++ b/liquibase/pom.xml
@@ -15,5 +15,10 @@
       <artifactId>derby</artifactId>
       <version>10.8.1.2</version>
     </dependency>
+    <dependency>
+      <groupId>com.h2database</groupId>
+      <artifactId>h2</artifactId>
+      <version>1.3.158</version>
+    </dependency>
   </dependencies>
 </project>
