--- a/cm-tools/pom.xml
+++ b/cm-tools/pom.xml
@@ -18,14 +18,14 @@
   <description>Configuration Management Tools</description>
   <groupId>org.kuali.cm</groupId>
   <artifactId>cm-tools</artifactId>
-  <version>1.5</version>
+  <version>1.6-SNAPSHOT</version>
   <properties>
     <kuali.testjar.phase>none</kuali.testjar.phase>
   </properties>
   <scm>
-    <connection>scm:svn:http://svn.kuali.org/repos/foundation/tags/cm-tools-1.5</connection>
-    <developerConnection>scm:svn:http://svn.kuali.org/repos/foundation/tags/cm-tools-1.5</developerConnection>
-    <url>http://svn.kuali.org/repos/foundation/pom/tags/cm-tools-1.5</url>
+    <connection>scm:svn:http://svn.kuali.org/repos/foundation/trunk/cm-tools</connection>
+    <developerConnection>scm:svn:http://svn.kuali.org/repos/foundation/trunk/cm-tools</developerConnection>
+    <url>http://svn.kuali.org/repos/foundation/pom/trunk/cm-tools</url>
   </scm>
   <developers>
     <developer>
