--- a/kc/kc311igstg/deploy.cfg
+++ b/kc/kc311igstg/deploy.cfg
@@ -3,7 +3,7 @@ svnLocation=kc_project/trunk
 dbType=oracle
 dbMode=embedded
 dbParent=dba
-dbImportMasks=KRC_*_B000.sql KC_*_B000.sql kcwklyig/KC_*_??S?.sql
+dbImportMasks=KRC_*_B000.sql KC_*_B000.sql kcwklyig/KC_*_??S?.sql KC_DML_01_COST_ELEMENT_0TSD.sql KC_DML_01_CUSTOM_ATTRIBUTE_0TSD.sql KC_DML_01_INV_CREDIT_TYPE_0TSD.sql KC_DML_01_KRA_USER_0TSD.sql KC_DML_01_PERSON_EXT_T_0TSD.sql KC_DML_01_PERSON_TRAINING_0TSD.sql KC_DML_01_UNIT_0TSD.sql KC_DML_01_VALID_SP_REV_APPROVAL_0TSD.sql KC_DML_02_CUSTOM_ATTRIBUTE_DOCUMENT_0TSD.sql KC_DML_02_PERSON_APPOINTMENT_0TSD.sql KC_DML_02_ROLODEX_0TSD.sql KC_DML_02_SPONSOR_0TSD.sql KC_DML_02_SPONSOR_HIERARCHY_0TSD.sql KC_DML_02_UNIT_ADMINISTRATOR_0TSD.sql KC_DML_03_AWARD_TEMPLATE_0TSD.sql KC_DML_03_INSTITUTE_LA_RATES_0TSD.sql KC_DML_03_INSTITUTE_RATES_0TSD.sql KC_DML_03_ORGANIZATION_0TSD.sql KC_DML_04_ORGANIZATION_TYPE_0TSD.sql KC_DML_04_ORGANIZATION_YNQ_0TSD.sql KC_DML_01_COST_ELEMENT_00S0.sql KC_DML_01_FIN_OBJECT_CODE_MAPPING_00S0.sql  
 import.torque.database.user=kc311igstg
 import.torque.database.schema=kc311igstg
 import.torque.database.password=igstg174kc
