git-svn-id: https://svn.kuali.org/repos/foundation/trunk@1764 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/deploy-artifact/pom.xml
+++ b/deploy-artifact/pom.xml
@@ -39,7 +39,7 @@
               </goals>
               <configuration>
                 <url>s3://maven.kuali.org/external</url>
-                <repositoryId>kuali.release</repositoryId>
+                <repositoryId>kuali.external</repositoryId>
               </configuration>
             </execution>
           </executions>
