git-svn-id: https://svn.kuali.org/repos/foundation/trunk@1767 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/deploy-artifact/pom.xml
+++ b/deploy-artifact/pom.xml
@@ -38,7 +38,7 @@
                 <goal>deploy-file</goal>
               </goals>
               <configuration>
-                <file>${env.WORKSPACE}/${env.GROUP_ID}/${env.ARTIFACT_ID}/${env.VERSION}/${env.ARTIFACT_ID}-${env.VERSION}.jar</file>
+                <file>${env.WORKSPACE}/target/upload.jar</file>
                 <url>s3://maven.kuali.org/external</url>
                 <repositoryId>kuali.external</repositoryId>
               </configuration>
