git-svn-id: https://svn.kuali.org/repos/foundation/trunk@1770 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/deploy-artifact/pom.xml
+++ b/deploy-artifact/pom.xml
@@ -38,9 +38,13 @@
                 <goal>deploy-file</goal>
               </goals>
               <configuration>
+                <groupId>${env.GROUP_ID}</groupId>
+                <artifactId>${env.ARTIFACT_ID}</artifactId>
+                <version>${env.VERSION}</version>
                 <file>${env.WORKSPACE}/upload.jar</file>
                 <url>s3://maven.kuali.org/external</url>
                 <repositoryId>kuali.external</repositoryId>
+                <packaging>jar</packaging>
               </configuration>
             </execution>
           </executions>
