Changing the rice version
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/cfg-envs/trunk@5827 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kc/krtrunk/deploy.cfg
+++ b/kc/krtrunk/deploy.cfg
@@ -1,4 +1,4 @@
-svnLocation=rice/tags/rice-1.0.3.2
+svnLocation=rice/tags/rice-1.0.3.3-m1
 dbSvnLocation=kc_project/trunk
 deployURL=test.kc.kuali.org:/opt/kc/trunk/webapps/kr-trunk.war
 configURL=test.kc.kuali.org:~/kuali/main/trunk/
