--- a/kc/krtrunk/deploy.cfg
+++ b/kc/krtrunk/deploy.cfg
@@ -1,4 +1,4 @@
-svnLocation=rice/tags/rice-1.0.3.3-m1
+svnLocation=rice/tags/rice-1.0.3.3
 dbSvnLocation=kc_project/trunk
 deployURL=test.kc.kuali.org:/opt/kc/trunk/webapps/kr-trunk.war
 configURL=test.kc.kuali.org:~/kuali/main/trunk/
